simple refactoring.